--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 <section id="sobre">
 <h2>Sobre mim</h2>
 <p>Meu nome é Alisson nasci no dia 16/09/2011 e gosto de lutar judô</p>
+
+</section>
+<section id="projetos">
+<h2>Projeto</h2>
+<ul>
+<li></li>
+</ul>
 </section>
 </body>
 </html>
