--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
 <title> Portifólio do Alisson </title>
 </head>
+<style>
+ *{
+margin: 0
+padding:0
+box-sinding:border-box;
+ }
+ body{
+font-family: Arial, sans-serif;
+background-color: #00000000;
+color: #8a47cc;
+line-height: 1.9;
+ }
+ h2{
+font-family;courier,arial,helvetica;
+color:rgba(218, 69, 255, 0.55);
+font-family;courier,arial,helvetica;
+text-align:center;
+ }
+</style>
 <body>
 <header>
 <h1>Alisson Ortega</h1>
+{}
 <nav>
 <ul>
 <li><a href="#sobre">Sobre mim </a></li>
@@ -15,15 +35,25 @@
 </nav>
 </header>
 <section id="sobre">
-<h2>Sobre mim</h2>
+<h2>Sobre Mim</h2>
 <p>Meu nome é Alisson nasci no dia 16/09/2011 e gosto de lutar judô</p>
-
 </section>
 <section id="projetos">
-<h2>Projeto</h2>
+<h2>Projetos</h2>
 <ul>
-<li></li>
+<li> Projeto 1 <a href="#">Descrição do projeto </a></li>
+<li> Projeto 2 <a href="#">Descrição do projeto </a></li>
+<li> Projeto 3 <a href="#">Descrição do projeto </a></li>
+<li> Projeto 4 <a href="#">Descrição do projeto </a></li>
+<li> Projeto 5 <a href="#">Descrição do projeto </a></li>
 </ul>
 </section>
+<section id="contato">
+<h2>Contato</h2>
+<p> Entrem em Contato Comigo Via:<a href="milto:alisson_ortega@estudante.sesisenai.org.br">milto:alisson_ortega@estudante.sesisenai.org.br</a> </p>
+</section>
+<footer>
+<p>&copy; @2025- Alisson Ortega</p>
+</footer>
 </body>
 </html>
