--- a/index.html
+++ b/index.html
@@ -4,27 +4,77 @@
 <title> Portifólio do Alisson </title>
 </head>
 <style>
- *{
-margin: 0
-padding:0
-box-sinding:border-box;
- }
- body{
-font-family: Arial, sans-serif;
-background-color: #00000000;
-color: #8a47cc;
-line-height: 1.9;
- }
- h2{
-font-family;courier,arial,helvetica;
-color:rgba(255, 69, 78, 0.55);
-font-family;courier,arial,helvetica;
-text-align:center;
- }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+    padding: 20px;
+}
+
+
+header {
+    background-color: #acabab;
+    color: #000000;
+    padding: 10px 0;
+    text-align: center;
+}
+
+
+header h1 {
+    margin-bottom: 10px;
+}
+
+
+nav ul {
+    list-style: none;
+} 
+
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+
+nav ul li a {
+    color: #acabab;
+    text-decoration: none;
+}
+
+
+section {
+    margin: 20px 0;
+}
+section#sobre, 
+section#projetos, 
+section#contato {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+}
+
+
 </style>
+
 <body>
 <header>
 <nav>
+<h1>Portfólio do Alisson Ortega</h1>
 <ul>
 <li><a href="#sobre">Sobre mim </a></li>
 <li><a href="#projetos">Projetos</a></li>
@@ -37,9 +87,9 @@ text-align:center;
 <p>Meu nome é Alisson nasci no dia 16/09/2011 e gosto de lutar judô</p>
 </section>
 <section id="projetos">
-<h2>Projetos</h2>
+
 <ul>
-<li> Projeto 1 <a href="#">Descrição do projeto </a></li>
+<li> Projeto 1 <a href="/Cadastro.html">Cadastros de pessoas </a></li>
 <li> Projeto 2 <a href="#">Descrição do projeto </a></li>
 <li> Projeto 3 <a href="#">Descrição do projeto </a></li>
 <li> Projeto 4 <a href="#">Descrição do projeto </a></li>
@@ -55,6 +105,4 @@ text-align:center;
 </footer>
 </body>
 </html>
-
-
 
