--- a/Cadastro.html
+++ b/Cadastro.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet"  href="Static/style.css">
 </head>
 <body>
+    <a href="/index.html">VOLTAR </a>
+    <button onclick="window.history.back()"> Voltar</button>
     <h1>Cadastro de pessoas</h1>
     <form action="processar_cadastro.php" method="post">
         <label for="nome">Nome:</label><br>
@@ -18,6 +20,9 @@
 
         <input type="submit" value="Cadastrar">
     </form>
+
+    
+
     </body>
 </html>
 
