--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    color: #333;
+    color: #000000;
     line-height: 1.6;
     padding: 20px;
 }
 
 
 header {
-    background-color: #acabab;
+    background-color: #b1aeae;
     color: #000000;
     padding: 10px 0;
     text-align: center;
@@ -45,7 +45,7 @@ nav ul li {
 
 
 nav ul li a {
-    color: #acabab;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -90,10 +90,10 @@ footer {
 
 <ul>
 <li> Projeto 1 <a href="/Cadastro.html">Cadastros de pessoas </a></li>
-<li> Projeto 2 <a href="#">Descrição do projeto </a></li>
-<li> Projeto 3 <a href="#">Descrição do projeto </a></li>
-<li> Projeto 4 <a href="#">Descrição do projeto </a></li>
-<li> Projeto 5 <a href="#">Descrição do projeto </a></li>
+<li> Projeto 2 <a href="#">Projeto desafio </a></li>
+<li> Projeto 3 <a href="#">Projeto inicial </a></li>
+<li> Projeto 4 <a href="#">Projeto das tabelas </a></li>
+<li> Projeto 5 <a href="#">Projeto  </a></li>
 </ul>
 </section>
 <section id="contato">
