--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ footer {
 
 <ul>
 <li> Projeto 1 <a href="/Cadastro.html">Cadastros de pessoas </a></li>
-<li> Projeto 2 <a href="#">Projeto desafio </a></li>
+<li> Projeto 2 <a href="/desafio.html">Projeto desafio </a></li>
 <li> Projeto 3 <a href="#">Projeto inicial </a></li>
 <li> Projeto 4 <a href="#">Projeto das tabelas </a></li>
 <li> Projeto 5 <a href="#">Projeto  </a></li>
